feat: look book page , without pdf viewer Needs js to implement

--- a/kids_items.html
+++ b/kids_items.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supply Apparel | Women </title>
+    <title>Supply Apparel | Kids </title>
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -436,12 +436,12 @@
         </div>
     </nav>
 </header>
-<main class="womens_page">
+<main class="kids_page">
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <h2>Women</h2>
-                <h5>Explore trendy designs from coolest around the world</h5>
+                <h2>Kids</h2>
+                <h5>Style your kids early with hip apparel for children</h5>
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-12 col-md-offset-0">
@@ -737,7 +737,7 @@
                                 <div class="item col-md-4 col-sm-6 col-xs-12">
                                     <div class="item_block">
                                         <div class="item_header">
-                                            <a href="boutique_page.html"><i
+                                            <a href="#"><i
                                                     class="item_icon"></i><span>Sally's Boutique</span></a>
                                         </div>
                                         <div class="item_body">
