--- a/mens_page.html
+++ b/mens_page.html
@@ -747,18 +747,20 @@
                                                       title="Add to wishlist"></span>
                                             </div>
                                         </div>
-                                        <div class="item_footer">
-                                            <div class="rewiew_block">
-                                                <span class="glyphicon glyphicon-star"></span>
-                                                <span class="glyphicon glyphicon-star"></span>
-                                                <span class="glyphicon glyphicon-star"></span>
-                                                <span class="glyphicon glyphicon-star"></span>
-                                                <span class="glyphicon glyphicon-star"></span>
-                                                <p>(39 Reviews)</p>
+                                        <a href="#">
+                                            <div class="item_footer">
+                                                <div class="rewiew_block">
+                                                    <span class="glyphicon glyphicon-star"></span>
+                                                    <span class="glyphicon glyphicon-star"></span>
+                                                    <span class="glyphicon glyphicon-star"></span>
+                                                    <span class="glyphicon glyphicon-star"></span>
+                                                    <span class="glyphicon glyphicon-star"></span>
+                                                    <p>(39 Reviews)</p>
+                                                </div>
+                                                <div class="name_block">Olivine Heels</div>
+                                                <div class="price_block">$45</div>
                                             </div>
-                                            <div class="name_block">Olivine Heels</div>
-                                            <div class="price_block">$45</div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="item col-md-4 col-sm-6 col-xs-12">
