--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#"><span class="cart_icon" title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse" id="website_navbar_collapse">
@@ -245,7 +245,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#"><span class="cart_icon" title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="dropdown women_dropdown">
@@ -499,7 +499,7 @@
                                         <div class="item col-md-3 col-sm-4 col-xs-6">
                                             <div class="item_block">
                                                 <div class="item_header">
-                                                    <a href="#"><i
+                                                    <a href="boutique_page.html"><i
                                                             class="item_icon"></i><span>Sally's Boutique</span></a>
                                                 </div>
                                                 <div class="item_body">
@@ -509,7 +509,7 @@
                                                               title="Add to wishlist"></span>
                                                     </div>
                                                 </div>
-                                                <a href="#">
+                                                <a href="view_product.html">
                                                     <div class="item_footer">
                                                         <div class="rewiew_block">
                                                             <span class="glyphicon glyphicon-star"></span>
