--- a/kids_items.html
+++ b/kids_items.html
@@ -295,7 +295,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown kids_dropdown">
+                    <li class="dropdown kids_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Kids</a>
                         <ul class="dropdown-menu">
