--- a/mens_page.html
+++ b/mens_page.html
@@ -273,7 +273,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown men_dropdown">
+                    <li class="dropdown men_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Men</a>
                         <ul class="dropdown-menu">
