--- a/women_items.html
+++ b/women_items.html
@@ -251,7 +251,7 @@
                     <li class="icons"><a href="#"><span class="cart_icon" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
-                    <li class="dropdown women_dropdown">
+                    <li class="dropdown women_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Women</a>
                         <ul class="dropdown-menu">
