--- a/boutique_page.html
+++ b/boutique_page.html
@@ -346,7 +346,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown boutiques_dropdown">
+                    <li class="dropdown boutiques_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Boutiques</a>
                         <ul class="dropdown-menu">
