--- a/look_book_page.html
+++ b/look_book_page.html
@@ -389,7 +389,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown look_dropdown">
+                    <li class="dropdown look_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Look Books</a>
                         <ul class="dropdown-menu">
