feat: create checkout pages and contact pages without responsiveness

--- a/view_product.html
+++ b/view_product.html
@@ -185,8 +185,12 @@
                 </a>
                 <div class="auth_section">
                     <a href="#" class="btn_create_boutique">Create a boutique</a>
-                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#registerModal">Sign Up</a>
-                    <a href="#" class="btn_auth" data-toggle="modal" data-target="#loginModal">Login</a>
+
+                    <a href="#" class="btn_auth">User Name</a>
+                    <a href="index.html" class="btn_auth btn_logout">Logout</a>
+
+                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+                    <a href="#" class="btn_auth hidden" data-toggle="modal" data-target="#loginModal">Login</a>
                 </div>
             </div>
         </div>
@@ -479,7 +483,7 @@
                     <a href="#" class="back">
                         Continue Shopping
                     </a>
-                    <a href="#" class="btn_checkout">Checkout</a>
+                    <a href="checkout_step_1.html" class="btn_checkout">Checkout</a>
                 </div>
             </div>
         </div>
