feat: create checkout pages and contact pages responsiveness

--- a/checkout_step_1.html
+++ b/checkout_step_1.html
@@ -330,7 +330,7 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="checkout_block">
                             <div class="checkout_header">
@@ -344,7 +344,7 @@
                                 </div>
                                 <div class="close_button"><span></span></div>
                             </div>
-                            <div class="col-sm-push-6 col-sm-6 cart_preview_block">
+                            <div class="col-sm-push-6 col-sm-6 col-xs-push-6 col-xs-6 cart_preview_block">
                                 <div class="row">
                                     <div class="product_block">
                                         <div class="product_item">
@@ -386,7 +386,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-pull-6 col-sm-6 step_block">
+                            <div class="col-sm-pull-6 col-sm-6 col-xs-pull-6 col-xs-6 step_block">
                                 <div class="row">
                                     <form action="" method="post">
                                         <fieldset class="main_field">
