--- a/checkout_step_2.html
+++ b/checkout_step_2.html
@@ -330,7 +330,7 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="checkout_block">
                             <div class="checkout_header">
@@ -344,7 +344,7 @@
                                 </div>
                                 <div class="close_button"><span></span></div>
                             </div>
-                            <div class="col-sm-push-6 col-sm-6 cart_preview_block">
+                            <div class="col-sm-push-6 col-sm-6 col-xs-push-6 col-xs-6 cart_preview_block">
                                 <div class="row">
                                     <div class="product_block">
                                         <div class="product_item">
@@ -386,7 +386,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-pull-6 col-sm-6 step_block">
+                            <div class="col-sm-push-6 col-sm-6 col-xs-pull-6 col-xs-6step_block">
                                 <div class="row">
                                     <ul class="nav nav-tabs  step2_tab" role="tablist">
                                         <li role="presentation" class="card active"><a href="#card" aria-controls="card"
@@ -418,7 +418,7 @@
                                                     </fieldset>
                                                     <a href="#" class="btn_info"><i></i>
                                                         <span>Your payment information is encrypted</span></a>
-                                                    <a href="checkout_step_2.html" class="btn_step">Continue</a>
+                                                    <a href="checkout_step_3.html" class="btn_step">Continue</a>
                                                 </fieldset>
                                             </form>
                                         </div>
