--- a/checkout_step_3.html
+++ b/checkout_step_3.html
@@ -330,7 +330,7 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="checkout_block">
                             <div class="checkout_header">
@@ -352,7 +352,7 @@
                                     soon. Once your order has been shipped, you will be sent a tracking number to track
                                     your order. Continue shopping for the best apparel!
                                 </div>
-                                <a href="#" class="btn_step">Continue</a>
+                                <a href="contact_us.html" class="btn_step">Continue</a>
                             </div>
                         </div>
                     </div>
