--- a/contact_us.html
+++ b/contact_us.html
@@ -330,14 +330,14 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="contact_block">
                             <div class="contact_header">
                                 <div class="title">Contact Us</div>
                                 <div class="close_button"><span></span></div>
                             </div>
-                            <div class="col-xs-10 col-xs-offset-1 contact_form">
+                            <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0 contact_form">
                                 <form action="" method="post">
                                     <input type="text" name="name" id="name" placeholder="Name"/>
 
