--- a/contact_us_success.html
+++ b/contact_us_success.html
@@ -330,7 +330,7 @@
     <section class="section_1">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
+                <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="row">
                         <div class="contact_block">
                             <div class="contact_header">
